--- a/VocieSDKTest/app/build.gradle
+++ b/VocieSDKTest/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile files('libs/Msc.jar')
+    compile 'com.google.code.gson:gson:2.8.1'
 }
