--- a/IWeather/app/src/main/AndroidManifest.xml
+++ b/IWeather/app/src/main/AndroidManifest.xml
@@ -11,13 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.WeatherShowActivity"
+            android:launchMode="singleTask"></activity>
+        <activity android:name=".ui.SettingActivity"></activity>
+        <activity android:name=".ui.CountyChooseActivity"></activity>
     </application>
 
 </manifest>
