CountyChooseActivity.java funciton all done add text search , speech search

--- a/IWeather/app/build.gradle
+++ b/IWeather/app/build.gradle
@@ -17,6 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets{
+        main{
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 dependencies {
@@ -33,4 +38,5 @@ dependencies {
     compile 'com.github.ismaeltoe:flowlayout:1.0'
     compile 'org.greenrobot:eventbus:3.0.0'
     testCompile 'junit:junit:4.12'
+    compile files('libs/Sunflower.jar')
 }
