--- a/IWeather/app/src/main/AndroidManifest.xml
+++ b/IWeather/app/src/main/AndroidManifest.xml
@@ -30,9 +30,10 @@
         </activity>
         <activity
             android:name=".ui.WeatherShowActivity"
-            android:launchMode="singleTask"></activity>
-        <activity android:name=".ui.SettingActivity"></activity>
-        <activity android:name=".ui.CountyChooseActivity"></activity>
+            android:launchMode="singleTask" />
+        <activity android:name=".ui.BookmarkSettingActivity" />
+        <activity android:name=".ui.CountyChooseActivity" />
+        <activity android:name=".ui.AlarmSettingActivity"></activity>
     </application>
 
 </manifest>
