--- a/IWeather/app/src/main/AndroidManifest.xml
+++ b/IWeather/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".IWeatherApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -32,8 +33,12 @@
             android:name=".ui.WeatherShowActivity"
             android:launchMode="singleTask" />
         <activity android:name=".ui.BookmarkSettingActivity" />
-        <activity android:name=".ui.CountyChooseActivity" />
-        <activity android:name=".ui.AlarmSettingActivity"></activity>
+        <activity
+            android:name=".ui.CountyChooseActivity"
+            android:launchMode="singleTask" />
+        <activity
+            android:name=".ui.AlarmSettingActivity"
+            android:launchMode="singleTask"></activity>
     </application>
 
 </manifest>
