add alarm func fix weathershow setCurrentItem, after add, delete, chose, show right

--- a/IWeather/app/src/main/AndroidManifest.xml
+++ b/IWeather/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
         <activity
             android:name=".ui.AlarmSettingActivity"
             android:launchMode="singleTask"></activity>
+
+        <receiver
+            android:name=".ui.AlarmInfoBroadcastReceiver"
+            android:enabled="true" />
     </application>
 
 </manifest>
