add bugly add alarm repeat make ui alpha more safe BroadcastReceiver can deal multi alarm at the same time, and will add alarm after boot

--- a/IWeather/app/build.gradle
+++ b/IWeather/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     testCompile 'junit:junit:4.12'
     compile files('libs/Msc.jar')
+    compile 'com.tencent.bugly:crashreport:2.6.5'
 }
