--- a/IMEPracticeDemo/app/src/main/AndroidManifest.xml
+++ b/IMEPracticeDemo/app/src/main/AndroidManifest.xml
@@ -16,6 +16,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".AndroidInputMethodService"
+            android:permission="android.permission.BIND_INPUT_METHOD" >
+            <intent-filter>
+                <action android:name="android.view.InputMethod" />
+            </intent-filter>
+            <meta-data android:name="android.view.im"
+                android:resource="@xml/imemethod"/>
+        </service>
     </application>
 
 </manifest>
