can chose the way to listen sms , in api < 16, content observer need do something to check if it's insert or update [important, haven't] add bugly

--- a/IMEPracticeDemo/app/build.gradle
+++ b/IMEPracticeDemo/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.tencent.bugly:crashreport:2.6.5'
 }
